--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ jobs:
   - uses: mr-smithers-excellent/docker-build-push@v5
     name: Build & push Docker image
     with:
-      image: noha133/cgi2
+      image: noha133noha/pythoncgi
       tags: v1, latest
       registry: docker.io
       dockerfile: Dockerfile
